# rufux

./: Makefile  README.md  meson.build
data/: org.rufus.linux.desktop  org.rufus.linux.metainfo.xml  rufus.gresource.xml  style.css
src/: main.c
src/common/: hash.c  hash.h  utils.c  utils.h
src/device/: device.c  device.h
src/disk/: disk_io.c  disk_io.h  partition.c  partition.h
src/format/: format.c  format.h
src/iso/: iso_analyzer.c  iso_analyzer.h  iso_extract.c  iso_extract.h  iso_writer.c  iso_writer.h
src/platform/: platform.c  platform.h
src/ui/: app.c  app.h  widgets.c  widgets.h  window.c  window.h
